# AjedrezTO

./: .gitignore  CMakeLists.txt  README.md  bishop.cpp  bishop.h  board.cpp  board.h  board.ui  button.cpp  button.h  cell.cpp  cell.h  chesscell.cpp  chesscell.h  chesspiece.cpp  chesspiece.h  constants.h  core.cpp  core.h  horse.cpp  horse.h  images.qrc  king.cpp  king.h  main.cpp  mainwindow.h  mainwindow.ui  pawn.cpp  pawn.h  queen.cpp  queen.h  tower.cpp  tower.h
